# qtchooser

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: main.yml
install/: CMakeLists.txt  LICENSE.html  README.html
install/Linux/: CMakeLists.txt  qtchooser.1
install/Windows/: AddToPath.wxs  CMakeLists.txt
qtchooser/: CMakeLists.txt  qtchooser_config.h.in
qtchooser/cli/: CMakeLists.txt  ChooseRunner.cpp  ChooseRunner.h  ListRunner.cpp  ListRunner.h  main.cpp
qtchooser/qtchooserlib/: CMakeLists.txt  CurrentChosen.cpp  CurrentChosen.h  EnvironmentInjector.cpp  EnvironmentInjector.h  EnvironmentInjectorLinux.cpp  EnvironmentInjectorLinux.h  EnvironmentInjectorWin.cpp  EnvironmentInjectorWin.h  EnvironmentInjector_linux.cpp  EnvironmentInjector_none.cpp  EnvironmentInjector_win.cpp  FindFile.cpp  FindFile.h  QtChooser.cpp  QtChooser.h  QtFinder.cpp  QtFinder.h  QtFinder_linux.cpp  QtFinder_none.cpp  QtFinder_win.cpp  QtInfo.cpp  QtInfo.h  VersionNumber.cpp  VersionNumber.h
test/: CMakeLists.txt
test/qtchooserlib/: CMakeLists.txt  QtFinderTest.cpp  QtInfoTest.cpp  main.cpp  qtchooser_testinfo.h.in
