set(CPACK_GENERATOR "DEB;RPM;TGZ")

# DEB
set(CPACK_DEBIAN_PACKAGE_SECTION "devel")
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS On)

# RPM
set(CPACK_RPM_PACKAGE_DESCRIPTION "${PROJECT_DESCRIPTION}")
set(CPACK_RPM_PACKAGE_GROUP "Development/Tools")
set(CPACK_RPM_PACKAGE_LICENSE "GPLv3")

include(GNUInstallDirs)
configure_file(${CMAKE_CURRENT_LIST_DIR}/qtchooser.1 ${CMAKE_CURRENT_BINARY_DIR}/qtchooser.1)
install(FILES
        ${CMAKE_CURRENT_BINARY_DIR}/qtchooser.1
        DESTINATION ${CMAKE_INSTALL_MANDIR}/man1
)
